CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(pokedex)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${POKEDEX_SOURCE_DIR}/cmake")
SET(BIN_DIR ${POKEDEX_SOURCE_DIR}/)

# Bump up warning levels appropriately for clang, gcc & msvc and build in debug mode
IF (${CMAKE_CXX_COMPILER_ID} STREQUAL "GNU" OR ${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang")
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic -std=c++1y")
	SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_DEBUG} -g")
	SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_RELEASE} -O2")
ELSEIF (${CMAKE_CXX_COMPILER_ID} STREQUAL "MSVC")
	IF (CMAKE_CXX_FLAGS MATCHES "/W[0-4]")
		STRING(REGEX REPLACE "/W[0-4]" "/W4" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
	ELSE()
		SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
	ENDIF()
ENDIF()

FIND_PACKAGE(SDL2 REQUIRED)
FIND_PACKAGE(SDL2_image REQUIRED)
FIND_PACKAGE(SDL2_ttf REQUIRED)
FIND_PACKAGE(Sqlite3 REQUIRED)
FIND_PACKAGE(GWEN REQUIRED)

INCLUDE_DIRECTORIES(
	${SDL2_INCLUDE_DIR}
	${SDL2_IMAGE_INCLUDE_DIR}
	${SDL2_TTF_INCLUDE_DIR}
	${SQLITE3_INCLUDE_DIR}
	${GWEN_INCLUDE_DIR}
)

ADD_EXECUTABLE(
	${PROJECT_NAME}
	main.cpp
	render_context.cpp
	imgui.cpp
	imgui_sdlbackend.cpp
	home_screen.cpp
    pokedex_screen.cpp
	sprite.cpp
	texture.cpp
	PokemonData.cpp
	screen_dispatcher.cpp
)

TARGET_LINK_LIBRARIES(
	${PROJECT_NAME}
	${SDL2_LIBRARY}
	${SDL2_TTF_LIBRARY}
	${SDL2_IMAGE_LIBRARY}
	${SQLITE3_LIBRARIES}
	${GWEN_LIBRARIES}
)

INSTALL(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION ${BIN_DIR})
